tests/compile_fail/invalid_precedence_struct_literal.stderr
error[E0451]: fields `layer_order` and `source_order` of struct `RulePrecedence` are private
 --> tests/compile_fail/invalid_precedence_struct_literal.rs:5:9
  |
4 |     let _precedence = RulePrecedence {
  |                       -------------- in this type
5 |         layer_order: LayerOrder::new(1),
  |         ^^^^^^^^^^^ private field
6 |         source_order: SourceOrder::new(2),
  |         ^^^^^^^^^^^^ private field
